syntax = "proto3";

package com.zeus.v1;

message Establishment {
    int32 id = 1;
    string name = 2;
    string description = 3;
    string image = 4;
    string street = 5;
    string city = 6;
    string country = 7;
}

service Zeus {
    rpc GetEstablishments() returns (GetEstablishmentsResponse) {}
    rpc CreateEstablishment(CreateEstablishmentRequest) returns (CreateEstablishmentResponse) {}
    rpc SetEstablishmentModerator(SetEstablishmentModeratorRequest) returns (SetEstablishmentModeratorResponse) {}
    
}

message GetEstablishmentsResponse {
    repeated Establishment establishments = 1;
}

message CreateEstablishmentRequest {
    Establishment establishment = 1;
}

message CreateEstablishmentResponse {
    Establishment establishment = 1;
}

message SetEstablishmentModeratorRequest {
    string establishmentId = 1;
    int32 userId = 2;
    string role = 3;
}

message SetEstablishmentModeratorResponse {
    string establishmentId = 1;
    int32 userId = 2;
    string role = 3;
}